Initialize comment-element

--- a/client/src/components/Header/Login/Login.css
+++ b/client/src/components/Header/Login/Login.css
@@ -4,3 +4,11 @@ input {
 select {
   display: block;
 }
+.register {
+  color: white;
+  background-color: rgb(19, 180, 19);
+}
+.log {
+  color: white;
+  background-color: dodgerblue;
+}
