--- a/client/src/components/Main/Post.css
+++ b/client/src/components/Main/Post.css
@@ -1,4 +1,14 @@
 .post {
   border-bottom-style: solid;
-  border-width: 2px;
+  width: auto;
+  font-family: "Times New Roman", Times, serif;
+}
+.author {
+  font-size: x-large;
+}
+.text {
+  font-size: small;
+}
+.comment {
+  display: inline;
 }
